--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clone Arc'teryx</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Cabeçalho -->
+    <header class="header">
+        <div class="logo">Arc'teryx</div>
+        <nav class="menu">
+            <ul>
+                <li><a href="Masculino.html">Masculino</a></li>
+                <li><a href="Feminino.html">Feminino</a></li>
+                <li><a href="Calçados.html">Calçados</a></li>
+                <li><a href="Descobrir.html">Descobrir</a></li>
+            </ul>
+        </nav>
+        <div class="actions">
+            <form class="search-form">
+                <input type="text" placeholder="Buscar...">
+                <button type="submit">OK</button>
+            </form>
+            <a href="login.html">Login</a>
+            <a href="Carrinho.html">Carrinho</a>
+        </div>
+    </header>
+
+    <!-- Conteúdo principal -->
+    <main>
+        <section class="banner">
+            <h1>Escalar</h1>
+            <p>Equipamentos masculinos para escalada leve e resistente.</p>
+        </section>
+
+        <section class="gallery">
+            <article class="card">
+                <img src="https://fastly.picsum.photos/id/235/5000/3333.jpg?hmac=i9YaRj_AF62lGVYNlYhdL2gqRDxoUzypXLUXBj8ihCc" alt="Masculino">
+                <h2>Masculino</h2>
+                <p>Equipamentos masculinos para escalada leve e fresco.</p>
+            </article>
+            <article class="card">
+                <img src="https://fastly.picsum.photos/id/243/2300/1533.jpg?hmac=BnvN5jcWjSaFHq5vJoJjJltaTOWalVdYo2iR6-s03bI" alt="Feminino">
+                <h2>Feminino</h2>
+                <p>Equipamentos femininos e confortaveis para escalada.</p>
+            </article>
+            <article class="card">
+                <img src="https://fastly.picsum.photos/id/278/5000/3333.jpg?hmac=9jqaiiw-7kbgDwalwTN1ZAvEVnTPZ-9bmvf5GunCaPY" alt="Calçados">
+                <h2>Calçados</h2>
+                <p>Calçados de escalada leve e durável, unicos e de melhor qualidade</p>
+            </article>
+            <article class="card">
+                <img src="https://fastly.picsum.photos/id/272/1920/1280.jpg?hmac=dgijlTamBDYj5kDYWF9leTKyXHXEvPa5WfXydXt9AII" alt="Descobrir">
+                <h2>Descobrir</h2>
+                <p>descubra equipamento para sua próxima sessão de escalada.</p>
+            </article>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>Arc'teryx</p>
+    </footer>
+
 </body>
 </html>
